feat: detect duplicate proto types by descriptor FQN
Extract the proto processing loop into processProtoFiles and add a
ProtoTypeConflictDetector that tracks protobuf fully qualified names
across files.

Identical types from multiple sources are logged and deduped.
Conflicting types (same FQN, different descriptor bytes) throw a
CodeGenException naming the FQN and both source files.

Comparison uses compiled descriptor bytes, so cosmetic differences
like comments and whitespace do not cause false positives.

Also removes an unused workdir parameter from processProtoFiles,
extracts loadDescriptorSet, drops a dead Protobuf parameter from
resolveDependencies, and fixes a static-via-instance call.